# timectrl

./: .buildinfo  README.md  intro.html  objects.inv  pyproject.toml  searchindex.js
timectrldemo/: _toc.yml  timectrl-demo1.ipynb
timectrldemo/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  timectrl-demo1.doctree
timectrldemo/_build/html/: timectrl-demo1.html
timectrldemo/_build/jupyter_execute/: markdown-notebooks.ipynb  timectrl-demo1.ipynb
