[tool.poetry]
name = "poetry add jupyter-book ipykernel pandas polars altair plotly ghp-import vega-datasets"
version = "0.1.0"
description = ""
authors = ["danaisdabest <dana.iltis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^1.0.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
polars = "^0.20.19"
altair = "^5.3.0"
plotly = "^5.20.0"
ghp-import = "^2.1.0"
vega-datasets = "^0.9.0"
pydantic = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
